--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Inter', BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
@@ -15,6 +15,25 @@ a {
   box-sizing: border-box;
 }
 
+button {
+  padding: 0;
+  border: none;
+  background-color: #0000;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 4rem;
+  font-weight: 800;
+  line-height: 95%;
+  margin: 0;
+}
+
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -23,4 +42,20 @@ a {
     color: white;
     background: black;
   }
+}
+
+.hstack {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.vstack {
+  display: flex;
+  flex-direction: column;
+}
+
+.light-container {
+  color: black;
+  background: white;
+  position: absolute;
 }
