--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,7 +69,7 @@ h3 {
     font-weight: 500;
     line-height: 130%;
     margin: 0;
-    margin-block: 5vw;
+    margin-bottom: 5vw;
     margin-top: 20vw;
 }
 
