--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 html,
 :root {
-    --theme-color: #1e13ff;
+    /* --theme-color: #1e13ff; */
+    --theme-color: #1c4dff;
     --background-color: #131314;
     --side-margin: 3vw;
     --nav-height: 11vw;
@@ -12,7 +13,7 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: "Inter", BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+    font-family: "Poppins", BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
         Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
@@ -50,7 +51,7 @@ hr {
 
 h1 {
     font-size: 18vw;
-    font-weight: 900;
+    font-weight: 800;
     line-height: 85%;
     margin: 0;
     margin-top: 4vw;
@@ -58,14 +59,14 @@ h1 {
 
 h2 {
     font-size: 10vw;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 130%;
     margin: 0;
-    margin-block: 6vw;
+    margin-block: 9vw;
 }
 
 h3 {
-    font-size: 6.5vw;
+    font-size: 7vw;
     font-weight: 500;
     line-height: 130%;
     margin: 0;
@@ -76,7 +77,7 @@ h3 {
 h4 {
     font-size: 5vw;
     font-weight: 500;
-    line-height: 130%;
+    /* line-height: 1.3; */
     margin: 0;
 }
 
@@ -160,7 +161,7 @@ body {
 }
 
 .small-bullet-container {
-    padding-block: 1.8vw;
+    padding-block: 3vw;
     align-items: flex-start;
 }
 .small-bullet-text {
@@ -206,6 +207,11 @@ body {
     margin-top: 5vw;
 }
 
+.numbered-list-item-container {
+    align-items: start;
+    margin-block: 10vw;
+}
+
 .numbered-list-and-buttons-container {
     display: flex;
     flex-direction: column;
@@ -218,20 +224,19 @@ body {
 .numbered-list-text {
     font-size: 3.5vw;
     margin: 0;
-    margin-top: 2vw;
+    margin-top: 2.5vw;
 }
 
 .numbered-list-number {
-    font-size: 15vw;
+    font-size: 5vw;
     font-weight: 700;
-    opacity: 12%;
+    /* opacity: 12%; */
     position: absolute;
+    color: var(--theme-color);
 }
 
 .numbered-list-element-container {
-    margin-left: 25vw;
-    margin-right: var(--side-margin);
-    margin-block: 4vw;
+    margin-left: 13vw;
 }
 
 .nav-bar-text {
@@ -310,8 +315,8 @@ body {
 }
 
 .arrow-button-text {
-    font-size: 4vw;
-    font-weight: 700;
+    font-size: 3.8vw;
+    font-weight: 600;
 }
 
 .services-preview-image-container {
@@ -364,6 +369,21 @@ body {
         gap: 3vw;
     }
 
+    .small-bullet-container {
+        padding-block: 1.8vw;
+        display: flex;
+        flex-direction: row;
+    }
+    .small-bullet-text {
+        margin-left: 2vw;
+        font-size: 1.5vw;
+    }
+    
+    .small-bullet {
+        width: 1vw;
+        margin-top: 0.5vw;
+    }
+
     .nav-bar-text {
         padding-inline: 0;
         margin-left: 6vw;
@@ -378,6 +398,9 @@ body {
         display: flex;
     }
 
+    .logo {
+        font-size: 2.5vw;
+    }
     .numbered-list-text {
         font-size: 1vw;
         margin-top: 0.8vw;
@@ -391,6 +414,11 @@ body {
         margin-left: 12vw;
         margin-block: 1.2vw;
     }
+
+
+.numbered-list-container {
+    margin-top: 0vw;
+}
 
 
     .arrow-button-text {
@@ -421,11 +449,11 @@ body {
 
     .numbered-list-and-image-container {
         flex-direction: row;
-        margin-top: 6vw;
+        margin-top: 16vw;
         gap: 3vw;
     }
     .services-preview-image-container {
-        width: 48vw;
+        width: 100vw;
     }
 
     .info-content-image-container {
