--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,21 @@ html,
 :root {
     --theme-color: #1c4dff;
     /* --theme-color: #ff4e32; */
-    --background-color: #131314;
+    --background-color: #000;
+    --card-color: #131314;
+    --thin-line-color: #fff4;
+    --soft-color: #fffa;
     --side-margin: 3vw;
     --nav-height: 11vw;
     --section-margin: 6rem;
-    --border-radius: 0.2rem;
+    --border-radius: 1.4vw;
+    --border-radius-large: 3vw;
     --button-padding-block: clamp(0.5rem, 1vw, 2rem);
+
+    /* --background-color: #fff;
+    --card-color: #e0e0eb;
+    --thin-line-color: #0004;
+    --soft-color: #000a; */
 }
 
 body {
@@ -18,7 +27,6 @@ body {
 }
 
 main {
-    /* background: #131314; */
 }
 
 a {
@@ -45,7 +53,7 @@ hr {
     border-top: 0;
     border-inline: 0;
     border-width: 0.3px;
-    opacity: 25%;
+    color: var(--thin-line-color);
     margin: 0;
 }
 
@@ -55,6 +63,7 @@ h1 {
     line-height: 85%;
     margin: 0;
     margin-top: 4vw;
+    margin-inline: var(--side-margin);
 }
 
 h2 {
@@ -62,7 +71,7 @@ h2 {
     font-weight: 600;
     line-height: 130%;
     margin: 0;
-    margin-block: 9vw;
+    margin-block: 12vw;
 }
 
 h3 {
@@ -70,8 +79,7 @@ h3 {
     font-weight: 500;
     line-height: 130%;
     margin: 0;
-    margin-bottom: 12vw;
-    margin-top: 20vw;
+    margin-block: 6vw;
 }
 
 h4 {
@@ -87,15 +95,17 @@ p {
     line-height: 130%;
     margin: 0;
     margin-top: 20vw;
-    opacity: 70%;
+    color: var(--soft-color);
 }
 
 /* @media (prefers-color-scheme: dark) { */
 html {
     color-scheme: dark;
+    /* color-scheme: light; */
 }
 body {
     color: white;
+    /* color: #000; */
     background: var(--background-color);
 }
 /* } */
@@ -112,6 +122,127 @@ body {
 
 .show-in-desktop {
     display: none;
+}
+
+.light-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.tagline-prefice {
+    margin: 0;
+    font-size: 3;
+    display: none;
+}
+
+.numbered-bullets-container {
+    gap: 5vw;
+    padding-bottom: 8vw;
+}
+.numbered-bullet-container {
+    border: 1px solid var(--thin-line-color);
+    border-radius: var(--border-radius);
+    align-items: center;
+}
+.numbered-bullet-index {
+    font-size: 12vw;
+    color: var(--theme-color);
+    font-weight: 500;
+    font-family: "Roboto Mono";
+    margin-block: 0;
+    margin-inline: 7vw;
+}
+
+.numbered-bullet-text-container {
+    padding-inline: 6vw;
+    padding-block: 4vw;
+}
+.numbered-bullet-title {
+}
+.numbered-bullet-text {
+    margin-top: 3vw;
+    font-size: 3.5vw;
+}
+
+.cards-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3vw;
+}
+
+.card-container {
+    width: 100%;
+    background-color: var(--card-color);
+    padding-inline: 8vw;
+    padding-block: 8vw;
+    border-radius: var(--border-radius-large);
+    justify-content: space-between;
+}
+.card-top-container {
+}
+
+.card-text-small {
+    margin-top: 14vw;
+    font-weight: 400;
+}
+.card-text-big {
+    margin-top: 4vw;
+    font-size: 8.7vw;
+    color: white;
+    font-weight: 500;
+}
+
+.card-footer {
+    margin-top: 18vw;
+    justify-content: space-between;
+}
+
+.card-footer-text {
+    font-size: 3vw;
+    font-weight: 500;
+    color: var(--thin-line-color);
+    font-family: "Roboto Mono";
+    white-space: nowrap;
+}
+
+.card-footer-name {
+    margin-top: 0;
+}
+
+.card-footer-arrow-container {
+    border: 1px solid var(--thin-line-color);
+    border-radius: var(--border-radius);
+    align-items: center;
+}
+
+.card-footer-index {
+    margin-top: 0;
+    margin-inline: 3vw;
+}
+
+.arrow-spacer {
+    /* height: 100%; */
+    min-width: 1px;
+    background-color: var(--thin-line-color);
+    display: flex;
+    align-self: stretch;
+    margin-block: 0;
+}
+
+.double-arrow-svg-container {
+    width: 4vw;
+    color: var(--theme-color);
+    display: flex;
+
+    margin-block: 2vw;
+    margin-left: 2vw;
+    margin-right: 1.8vw;
+}
+.arrow-button-svg-container {
+    display: flex;
+    justify-content: center;
+    width: 5vw;
+    color: white;
 }
 
 .footer-container {
@@ -135,22 +266,22 @@ body {
 
 .footer-info-container {
     justify-content: start;
-
 }
 
 .footer-header {
-    font-size: 4vw;
+    font-size: 3.4vw;
     font-weight: 400;
     margin-bottom: 5vw;
     margin-top: 0;
-    opacity: 50%;
+    color: var(--soft-color);
+    font-family: "Roboto Mono";
 }
 
 .footer-text {
     font-size: 4vw;
     margin-bottom: 5vw;
     margin-top: 0;
-    opacity: 100%;
+    color: white;
 }
 
 .footer-phone-container {
@@ -159,22 +290,26 @@ body {
 }
 
 .footer-contact-container {
-
     justify-content: space-between;
-    
+
     margin-bottom: 12vw;
 }
 .footer-adress {
-    font-size: 3vw;
+    font-size: 3.4vw;
     font-weight: 400;
     margin-bottom: 5vw;
     margin-top: 0;
-    opacity: 50%;
+    color: var(--thin-line-color);
+}
+
+.footer-copyright {
+    font-size: 3vw;
+    font-family: "Roboto Mono";
 }
 
 .services-header {
-     margin-top: 16vw;
-     margin-bottom: 18vw;
+    margin-top: 16vw;
+    margin-bottom: 18vw;
 }
 .card {
     background: black;
@@ -189,12 +324,13 @@ body {
 }
 
 .phone-number {
-    font-size: 5vw;
+    font-size: 6vw;
     margin-left: 3vw;
     white-space: nowrap;
+    font-family: "Roboto Mono";
 }
 .phone-icon {
-    height: 5vw
+    height: 6vw;
 }
 
 .form-button {
@@ -216,11 +352,14 @@ body {
 .info-content-container {
     flex-direction: column;
     display: flex;
+    background-color: var(--card-color);
+    padding-inline: var(--side-margin);
+    margin-bottom: 12vw;
 }
 
 .servics-contact-container {
     margin-top: 12vw;
-    margin-bottom: 30vw;
+    margin-bottom: 12vw;
     align-items: stretch;
     justify-content: space-between;
 }
@@ -259,7 +398,12 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-    background: linear-gradient(0deg, rgba(19,19,20,1) 0%, rgba(19,19,20,0) 30%);
+    /* background: linear-gradient(0deg, rgba(19,19,20,1) 0%, rgba(19,19,20,0) 30%); */
+    background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0) 30%
+    );
 }
 
 .small-bullet-container {
@@ -269,7 +413,7 @@ body {
 .small-bullet-text {
     margin-left: 4vw;
     margin-block: 0;
-    opacity: 80%;
+    color: var(--soft-color);
     font-size: 4.2vw;
 }
 
@@ -286,7 +430,6 @@ body {
     margin-top: 3vw;
     margin-bottom: 6vw;
 }
-
 
 .arrow-button {
     background: var(--theme-color);
@@ -308,19 +451,15 @@ body {
 }
 
 .numbered-list-container {
-    margin-top: 5vw;
+    margin-top: 3vw;
 }
 
 .numbered-list-item-container {
     align-items: start;
-    margin-block: 10vw;
+    margin-block: 8vw;
 }
 
 .numbered-list-and-buttons-container {
-    display: flex;
-    flex-direction: column;
-}
-.numbered-list-and-image-container {
     display: flex;
     flex-direction: column;
 }
@@ -328,19 +467,28 @@ body {
 .numbered-list-text {
     font-size: 3.5vw;
     margin: 0;
-    margin-top: 2.5vw;
+    margin-top: 1.6vw;
+}
+.numbered-list-line {
+    display: none;
 }
 
 .numbered-list-number {
     font-size: 5vw;
-    font-weight: 700;
-    /* opacity: 12%; */
+    font-weight: 500;
     position: absolute;
     color: var(--theme-color);
+    font-family: "Roboto Mono";
 }
 
 .numbered-list-element-container {
     margin-left: 13vw;
+}
+
+.numbered-list-and-image-sub-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .nav-bar-text {
@@ -348,6 +496,7 @@ body {
     padding-right: 21vw;
     padding-block: 5vw;
     font-size: 4vw;
+    font-family: "Roboto Mono";
 }
 
 .close-button {
@@ -362,16 +511,9 @@ body {
     height: var(--nav-height);
 }
 
-.light-container {
-    /* color: black;
-    background: white; */
-    position: absolute;
-    padding-inline: var(--side-margin);
-}
-
 .vhr {
     background: black;
-    opacity: 30%;
+    color: var(--thin-line-color);
     width: 0.3px;
     margin: 0;
 }
@@ -383,9 +525,20 @@ body {
     margin-bottom: 6vw;
 }
 
-.services-preview-container {
+.landing-page-content-container {
     padding-inline: var(--side-margin);
     padding-top: 24vw;
+}
+
+.numbered-list-and-image-container {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    background-color: var(--card-color);
+    padding-inline: var(--side-margin);
+    margin-top: 28vw;
+    /* padding-block: 8vw; */
+    /* border-radius: var(--border-radius-large); */
 }
 
 .accent-line-top {
@@ -415,7 +568,11 @@ body {
     display: flex;
     flex-direction: column;
     margin-top: -20vw;
-    margin-inline: var(--side-margin);
+    padding-inline: var(--side-margin);
+}
+
+.tagline {
+    margin: 0;
 }
 
 .arrow-button-text {
@@ -437,6 +594,8 @@ body {
         --side-margin: 6vw;
         --section-margin: 6rem;
         --nav-height: clamp(3rem, 4vw, 4rem);
+        --border-radius: 0.4vw;
+        --border-radius-large: 1vw;
     }
 
     h1 {
@@ -446,6 +605,7 @@ body {
 
     h2 {
         font-size: 4vw;
+        margin-block: 5vw;
     }
 
     h3 {
@@ -468,9 +628,64 @@ body {
         display: flex;
     }
 
+    .tagline-prefice {
+        display: block;
+    }
+
+    .tagline {
+        margin-bottom: 8vh;
+    }
+
+    .cards-container {
+        flex-direction: row;
+        gap: 2vw;
+    }
+
+    .card-container {
+        padding-inline: 2vw;
+        padding-block: 2vw;
+        border-radius: var(--border-radius-large);
+    }
+
+    .card-text-small {
+        margin-top: 2vw;
+    }
+    .card-text-big {
+        margin-top: 1.4vw;
+        font-size: 2.4vw;
+    }
+
+    .card-footer {
+        margin-top: 3vw;
+    }
+
+    .card-footer-text {
+        font-size: 0.8vw;
+    }
+
+    .card-footer-index {
+        margin-top: 0;
+        margin-inline: 0.7vw;
+    }
+
+    .double-arrow-svg-container {
+        width: 1.2vw;
+        margin-block: 0.5vw;
+        margin-left: 0.5vw;
+        margin-right: 0.4vw;
+    }
+
+    .arrow-button-svg-container {
+        width: 1.8vw;
+    }
+
     .info-content-container {
         flex-direction: row;
-        gap: 3vw;
+        gap: 4vw;
+        margin-bottom: 8vw;
+        margin-inline: 2vw;
+        padding-left: 0;
+        border-radius: var(--border-radius-large);
     }
 
     .small-bullet-container {
@@ -482,9 +697,9 @@ body {
         margin-left: 2vw;
         font-size: 1.5vw;
     }
-    
+
     .small-bullet {
-        width: 1vw;
+        min-width: 1vw;
         margin-top: 0.5vw;
     }
 
@@ -492,7 +707,7 @@ body {
         padding-inline: 0;
         margin-left: 6vw;
         padding-block: 0;
-        font-size: 1.1vw;
+        font-size: 0.9vw;
         height: 100%;
         display: flex;
         align-items: center;
@@ -511,27 +726,43 @@ body {
     }
 
     .numbered-list-number {
-        font-size: 5vw;
+        font-size: 1.4vw;
     }
 
     .numbered-list-element-container {
-        margin-left: 12vw;
-        margin-block: 1.2vw;
+        margin-left: 6vw;
+    }
+
+    .numbered-list-container {
+        margin-top: 0vw;
+    }
+    .numbered-list-and-image-sub-container {
+        margin-top: 0vw;
+        align-items: start;
+        gap: 3vw;
+    }
+
+    .numbered-list-line {
+        display: block;
+        width: auto;
+        height: 1px;
+        background-color: var(--thin-line-color);
+        margin-inline: calc(-1 * var(--side-margin));
     }
 
 
-.numbered-list-container {
-    margin-top: 0vw;
+.numbered-bullets-container {
+    gap: 2vw;
+    padding-bottom: 3vw;
 }
-
-
     .arrow-button-text {
         font-size: 1.4vw;
     }
     .arrow-buttons-container {
         gap: 0.5vw;
         width: 50vw;
-        margin-top: 12vh;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
     /* .landing-page-container {
@@ -539,29 +770,42 @@ body {
     } */
 
     .tagline-container {
-        margin-top: calc(-56vh - 15vw);
-        margin-inline: var(--side-margin);
+        margin-top: calc(-100vh + var(--nav-height));
+        height: calc(100vh - var(--nav-height));
+        gap: 6vh;
+        justify-content: center;
     }
 
     .landing-page-image-container {
         height: calc(100vh - var(--nav-height));
     }
 
+    .landing-page-content-container {
+        padding-top: 6vw;
+    }
+
     .numbered-list-title {
-        margin-top: 0;
+        margin-block: 2vw;
     }
 
     .numbered-list-and-image-container {
-        flex-direction: row;
         margin-top: 16vw;
         gap: 3vw;
+        margin-inline: 2vw;
+        border-radius: var(--border-radius-large);
+    }
+    .numbered-list-and-image-sub-container {
+        flex-direction: row;
+        justify-content: space-between;
     }
     .services-preview-image-container {
-        width: 100vw;
+        width: 48vw;
     }
 
     .info-content-image-container {
-        width: 48vw;
+        margin: 0;
+        width: 54.5vw;
+        height: 0
     }
 
     .image-container {
@@ -570,4 +814,74 @@ body {
     .numbered-list-and-buttons-container {
         /* width: auto; */
     }
+
+    .numbered-list-item-container {
+        margin: 0;
+        margin-bottom: 3vw;
+    }
+
+
+
+.footer-logo-container {
+    margin-bottom: 6vw;
+}
+.footer-links-container {
+    margin-bottom: 4vw;
+}
+
+
+.footer-header {
+    font-size: 1.4vw;
+    margin-bottom: 1.2vw;
+}
+
+.footer-text {
+    font-size: 1.6vw;
+    margin-bottom: 1.2vw;
+}
+
+.footer-phone-container {
+    margin-bottom: 3vw;
+}
+
+.footer-contact-container {
+
+    margin-bottom: 3vw;
+}
+.footer-adress {
+    font-size: 1.2vw;
+    margin-bottom: 2vw;
+}
+
+.footer-copyright {
+    font-size: 1.1vw;
+}
+
+
+.services-header {
+    margin-top: 5vw;
+    margin-bottom: 6vw;
+}
+
+
+.servics-contact-container {
+    margin-top: 4vw;
+    margin-bottom: 4vw;
+    align-items: stretch;
+    justify-content: space-between;
+}
+
+.services-bullet-container {
+    margin-bottom: 6vw;
+}
+
+
+.phone-number {
+    font-size: 2vw;
+    margin-left: 1vw;
+}
+.phone-icon {
+    height: 2vw;
+}
+
 }
