--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 html,
 :root {
     --theme-color: #1c4dff;
+    --theme-color-hover: #1c91ff;
     /* --theme-color: #ff4e32; */
     --background-color: #000;
     --card-color: #131314;
@@ -79,7 +80,7 @@ h3 {
     font-weight: 500;
     line-height: 130%;
     margin: 0;
-    margin-block: 6vw;
+    margin-block: 12vw;
 }
 
 h4 {
@@ -127,6 +128,107 @@ body {
 .light-container {
     display: flex;
     flex-direction: column;
+}
+
+.map {
+    width: 100%;
+    aspect-ratio: 1.3;
+    border: 0;
+    border-radius: var(--border-radius-large);
+    margin-bottom: 3vw;
+}
+
+.contact-container {
+    display: flex;
+    flex-direction: column;
+    padding-inline: var(--side-margin);
+}
+
+.contact-container-bottom {
+    display: flex;
+    flex-direction: column;
+    padding-inline: var(--side-margin);
+}
+
+.contact-header {
+    font-size: 4vw;
+    font-weight: 400;
+    margin-bottom: 2vw;
+    margin-top: 0;
+    color: var(--theme-color);
+    font-family: "Roboto Mono";
+}
+
+.contact-text {
+    font-size: 8vw;
+    margin-bottom: 10vw;
+    margin-top: 0;
+    color: white;
+}
+.contact-adress {
+    font-size: 5vw;
+    margin-bottom: 10vw;
+    margin-top: 0;
+    color: white;
+}
+
+.contact-arrows-container {
+    gap: 2vw;
+    margin-bottom: 15vw;
+}
+
+.services-spacer {
+    height: 20vw;
+}
+
+.header-logo-container {
+    margin-left: var(--side-margin);
+}
+
+.footer-logo-image-container {
+    width: 60vw;
+    aspect-ratio: 1;
+    position: relative;
+}
+.footer-logo-text-container {
+    width: 100%;
+    align-items: center;
+    margin-bottom: 18vw;
+}
+.logo-subtitle {
+    line-height: 105%;
+    font-size: 2.2vw;
+    color: var(--theme-color);
+    font-weight: 400;
+    letter-spacing: 0.14em;
+}
+.header-logo-sub-container {
+    margin-top: -0.5vw;
+    height: 3.2vw;
+    aspect-ratio: 1;
+}
+.logo {
+    line-height: 105%;
+    font-size: 6.2vw;
+    color: var(--theme-color);
+    font-weight: 600;
+    letter-spacing: 0.3em;
+}
+
+.footer-logo {
+    line-height: 105%;
+    font-size: 10vw;
+    color: var(--theme-color);
+    font-weight: 600;
+    letter-spacing: 0.3em;
+}
+
+.footer-logo-subtitle {
+    line-height: 105%;
+    font-size: 3.56vw;
+    color: var(--theme-color);
+    font-weight: 400;
+    letter-spacing: 0.14em;
 }
 
 .tagline-prefice {
@@ -210,9 +312,14 @@ body {
 }
 
 .card-footer-arrow-container {
-    border: 1px solid var(--thin-line-color);
+    border: 1px solid;
+    border-color: var(--thin-line-color);
     border-radius: var(--border-radius);
     align-items: center;
+    transition: 0.2s;
+}
+.card-footer-arrow-container:hover{
+    border-color: var(--theme-color);
 }
 
 .card-footer-index {
@@ -233,7 +340,6 @@ body {
     width: 4vw;
     color: var(--theme-color);
     display: flex;
-
     margin-block: 2vw;
     margin-left: 2vw;
     margin-right: 1.8vw;
@@ -247,13 +353,13 @@ body {
 
 .footer-container {
     margin-inline: var(--side-margin);
-    margin-top: 25vw;
+    /* margin-top: 20vw; */
     margin-bottom: 12vw;
 }
 
 .footer-logo-container {
     justify-content: center;
-    margin-bottom: 18vw;
+    margin-bottom: 0vw;
 }
 .footer-links-container {
     justify-content: space-between;
@@ -342,17 +448,19 @@ body {
 
 .info-content-image-container {
     margin-inline: calc(-1 * var(--side-margin));
+    aspect-ratio: 1;
 }
 
 .image-container {
     margin-inline: calc(-1 * var(--side-margin));
     background-color: #25f5;
+    position: relative;
 }
 
 .info-content-container {
     flex-direction: column;
     display: flex;
-    background-color: var(--card-color);
+    /* background-color: var(--card-color); */
     padding-inline: var(--side-margin);
     margin-bottom: 12vw;
 }
@@ -370,12 +478,6 @@ body {
 
 .theme-color {
     color: var(--theme-color);
-}
-.logo {
-    margin-left: var(--side-margin);
-    font-size: 8vw;
-    color: var(--theme-color);
-    font-weight: 700;
 }
 
 .linkedin-button {
@@ -433,11 +535,16 @@ body {
 
 .arrow-button {
     background: var(--theme-color);
+    
     width: 100%;
     justify-content: center;
     gap: 2vw;
     padding-block: var(--button-padding-block);
     border-radius: var(--border-radius);
+    transition: 0.2s ease;
+}
+.arrow-button:hover {
+    background: var(--theme-color-hover);
 }
 .navbar {
     display: flex;
@@ -472,6 +579,15 @@ body {
 .numbered-list-line {
     display: none;
 }
+.footer-line {
+    display: block;
+    width: 100vw;
+    height: 1px;
+    background-color: var(--thin-line-color);
+    opacity: 50%;
+    margin-bottom: 3vw;
+    margin-top: 20vw;
+}
 
 .numbered-list-number {
     font-size: 5vw;
@@ -496,7 +612,17 @@ body {
     padding-right: 21vw;
     padding-block: 5vw;
     font-size: 4vw;
-    font-family: "Roboto Mono";
+    /* font-family: "Roboto Mono"; */
+    opacity: 0.5;
+    transition: 0.2s ease;
+
+}
+.nav-bar-text-active {
+    opacity: 1;
+}
+
+.nav-bar-text:hover {
+    opacity: 1;
 }
 
 .close-button {
@@ -534,7 +660,7 @@ body {
     display: flex;
     flex-direction: column;
     width: auto;
-    background-color: var(--card-color);
+    /* background-color: var(--card-color); */
     padding-inline: var(--side-margin);
     margin-top: 28vw;
     /* padding-block: 8vw; */
@@ -581,6 +707,8 @@ body {
 }
 
 .services-preview-image-container {
+    width: 100vw;
+    aspect-ratio: 1;
 }
 
 .nav-dropdown-container {
@@ -626,6 +754,38 @@ body {
 
     .show-in-desktop {
         display: flex;
+    }
+
+    .contact-container {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .contact-header {
+        font-size: 1.2vw;
+        margin-bottom: 2vw;
+    }
+    
+    .contact-text {
+        font-size: 2.4vw;
+        margin-bottom: 6vw;
+    }
+    .contact-adress {
+        font-size: 2vw;
+        margin-bottom: 2vw;
+    }
+
+    .map{
+        aspect-ratio: 2;
+    }
+
+
+.contact-arrows-container {
+    gap: 2vw;
+    margin-bottom: 10vw;
+}
+
+    .services-spacer {
+        height: 0vw;
     }
 
     .tagline-prefice {
@@ -686,6 +846,7 @@ body {
         margin-inline: 2vw;
         padding-left: 0;
         border-radius: var(--border-radius-large);
+        background-color: var(--card-color);
     }
 
     .small-bullet-container {
@@ -718,8 +879,13 @@ body {
     }
 
     .logo {
-        font-size: 2.5vw;
+        font-size: 2vw;
     }
+
+    .logo-subtitle {
+        font-size: 0.71vw;
+    }
+
     .numbered-list-text {
         font-size: 1vw;
         margin-top: 0.8vw;
@@ -743,18 +909,22 @@ body {
     }
 
     .numbered-list-line {
+        height: 0.3px;
+    }
+    .footer-line {
         display: block;
-        width: auto;
-        height: 1px;
+        width: 100vw;
+        height: 0.3px;
         background-color: var(--thin-line-color);
-        margin-inline: calc(-1 * var(--side-margin));
+        opacity: 50%;
+        margin-bottom: 3vw;
+        margin-top: 20vw;
     }
 
-
-.numbered-bullets-container {
-    gap: 2vw;
-    padding-bottom: 3vw;
-}
+    .numbered-bullets-container {
+        gap: 2vw;
+        padding-bottom: 3vw;
+    }
     .arrow-button-text {
         font-size: 1.4vw;
     }
@@ -790,9 +960,9 @@ body {
 
     .numbered-list-and-image-container {
         margin-top: 16vw;
-        gap: 3vw;
         margin-inline: 2vw;
         border-radius: var(--border-radius-large);
+        background-color: var(--card-color);
     }
     .numbered-list-and-image-sub-container {
         flex-direction: row;
@@ -805,7 +975,9 @@ body {
     .info-content-image-container {
         margin: 0;
         width: 54.5vw;
-        height: 0
+        aspect-ratio: 1;
+        border-radius: var(--border-radius-large);
+        overflow: hidden;
     }
 
     .image-container {
@@ -820,68 +992,84 @@ body {
         margin-bottom: 3vw;
     }
 
+    .footer-logo-image-container {
+        width: 12vw;
+    }
 
+    .footer-logo {
+        font-size: 3vw;
+    }
 
-.footer-logo-container {
-    margin-bottom: 6vw;
-}
-.footer-links-container {
-    margin-bottom: 4vw;
-}
+    .footer-logo-subtitle {
+        font-size: 1.06vw;
+    }
 
+    .footer-logo-text-container {
+        margin-bottom: 9vw;
+    }
 
-.footer-header {
-    font-size: 1.4vw;
-    margin-bottom: 1.2vw;
-}
+    .footer-container {
+        margin-inline: 30vw;
+        margin-top: 0vw;
+        margin-bottom: 5vw;
+    }
 
-.footer-text {
-    font-size: 1.6vw;
-    margin-bottom: 1.2vw;
-}
+    .footer-logo-container {
+        margin-bottom: 0vw;
+    }
+    .footer-links-container {
+        margin-bottom: 4vw;
+    }
 
-.footer-phone-container {
-    margin-bottom: 3vw;
-}
+    .footer-header {
+        font-size: 1vw;
+        margin-bottom: 1vw;
+    }
 
-.footer-contact-container {
+    .footer-text {
+        font-size: 1.1vw;
+        margin-bottom: 0.9vw;
+    }
 
-    margin-bottom: 3vw;
-}
-.footer-adress {
-    font-size: 1.2vw;
-    margin-bottom: 2vw;
-}
+    .footer-phone-container {
+        margin-bottom: 2.5vw;
+        justify-content: center;
+        gap: 2vw;
+    }
 
-.footer-copyright {
-    font-size: 1.1vw;
-}
+    .footer-contact-container {
+        margin-bottom: 2.5vw;
+    }
+    .footer-adress {
+        font-size: 1vw;
+        margin-bottom: 1.6vw;
+    }
 
+    .footer-copyright {
+        font-size: 1vw;
+    }
 
-.services-header {
-    margin-top: 5vw;
-    margin-bottom: 6vw;
-}
+    .services-header {
+        margin-top: 5vw;
+        margin-bottom: 6vw;
+    }
 
+    .servics-contact-container {
+        margin-top: 4vw;
+        margin-bottom: 4vw;
+        align-items: stretch;
+        justify-content: space-between;
+    }
 
-.servics-contact-container {
-    margin-top: 4vw;
-    margin-bottom: 4vw;
-    align-items: stretch;
-    justify-content: space-between;
-}
+    .services-bullet-container {
+        margin-bottom: 6vw;
+    }
 
-.services-bullet-container {
-    margin-bottom: 6vw;
-}
-
-
-.phone-number {
-    font-size: 2vw;
-    margin-left: 1vw;
-}
-.phone-icon {
-    height: 2vw;
-}
-
+    .phone-number {
+        font-size: 2vw;
+        margin-left: 1vw;
+    }
+    .phone-icon {
+        height: 2vw;
+    }
 }
